test/error/ast/MultExprDifferentTypes.mod
MODULE MultExprDifferentTypes;
VAR a: INTEGER; b: REAL; x: REAL;
BEGIN
  x := a * b;
END MultExprDifferentTypes.
